--- a/app/src/main/res/layout/activity_customer_menu_page.xml
+++ b/app/src/main/res/layout/activity_customer_menu_page.xml
@@ -13,7 +13,257 @@
         android:layout_alignParentTop="true"
         android:layout_above="@+id/bottomNavbar"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp">
+        android:layout_marginHorizontal="20dp"
+        android:orientation="vertical">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            app:cardCornerRadius="120dp"
+            app:cardBackgroundColor="@color/cardview_light_background"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_search_24"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="16dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Search Restaurant"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_medium"
+                    android:layout_marginLeft="16dp"/>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:elevation="16dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="24dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="NamaResto"
+                        android:fontFamily="@font/opensans_bold"
+                        android:textSize="20sp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="5"
+                        android:layout_marginLeft="6dp"
+                        android:fontFamily="@font/opensans_regular"/>
+
+                    <ImageView
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/ic_baseline_star_24"
+                        android:layout_marginTop="8dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Alamat"
+                        android:fontFamily="@font/opensans_regular"
+                        android:layout_marginLeft="136dp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="96dp"
+                        android:layout_height="104dp"
+                        android:elevation="2dp"
+                        android:layout_marginTop="8dp"
+                        app:cardCornerRadius="16dp">
+
+                        <LinearLayout
+                            android:layout_width="96dp"
+                            android:layout_height="104dp"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="72dp"
+                                android:layout_height="48dp"
+                                android:src="@drawable/sayur_asem"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Sayur Asem"
+                                android:fontFamily="@font/opensans_bold"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="8dp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Rp 5.000"
+                                android:layout_gravity="center"
+                                android:layout_marginBottom="6dp"/>
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="96dp"
+                        android:layout_height="104dp"
+                        android:elevation="2dp"
+                        android:layout_marginTop="8dp"
+                        app:cardCornerRadius="16dp"
+                        android:layout_marginLeft="16dp">
+
+                        <LinearLayout
+                            android:layout_width="96dp"
+                            android:layout_height="104dp"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="72dp"
+                                android:layout_height="48dp"
+                                android:src="@drawable/ayam_goreng"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Ayam Goreng"
+                                android:fontFamily="@font/opensans_bold"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="8dp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Rp 6.000"
+                                android:layout_gravity="center"
+                                android:layout_marginBottom="6dp"/>
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="96dp"
+                        android:layout_height="104dp"
+                        android:elevation="2dp"
+                        android:layout_marginTop="8dp"
+                        app:cardCornerRadius="16dp"
+                        android:layout_marginLeft="16dp">
+
+                        <LinearLayout
+                            android:layout_width="96dp"
+                            android:layout_height="104dp"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="72dp"
+                                android:layout_height="48dp"
+                                android:src="@drawable/nasi_uduk"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Nasi Uduk"
+                                android:fontFamily="@font/opensans_bold"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="8dp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Rp 25.000"
+                                android:layout_gravity="center"
+                                android:layout_marginBottom="6dp"/>
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="96dp"
+                        android:layout_height="104dp"
+                        android:elevation="2dp"
+                        android:layout_marginTop="8dp"
+                        app:cardCornerRadius="16dp"
+                        android:layout_marginLeft="16dp">
+
+                        <LinearLayout
+                            android:layout_width="96dp"
+                            android:layout_height="104dp"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="72dp"
+                                android:layout_height="48dp"
+                                android:src="@drawable/ikan_pepes"
+                                android:layout_gravity="center"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Ikan Pepes"
+                                android:fontFamily="@font/opensans_bold"
+                                android:textColor="@color/black"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="8dp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Rp 6.500"
+                                android:layout_gravity="center"
+                                android:layout_marginBottom="6dp"/>
+                        </LinearLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
