--- a/app/src/main/res/layout/activity_customer_menu_page.xml
+++ b/app/src/main/res/layout/activity_customer_menu_page.xml
@@ -50,7 +50,7 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="180dp"
             android:elevation="16dp"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="16dp"
@@ -58,7 +58,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="180dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -259,6 +259,14 @@
                     </androidx.cardview.widget.CardView>
 
                 </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="View All"
+                    android:textColor="@color/bold_orange"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="8dp"/>
 
             </LinearLayout>
 
