--- a/app/src/main/res/layout/activity_customer_order_page.xml
+++ b/app/src/main/res/layout/activity_customer_order_page.xml
@@ -13,7 +13,21 @@
         android:layout_alignParentTop="true"
         android:layout_above="@+id/bottomNavbar"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp">
+        android:layout_marginHorizontal="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Order"
+            android:fontFamily="@font/opensans_bold"
+            android:textSize="32sp"
+            android:textColor="@color/black"
+            android:layout_marginBottom="16dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
