--- a/app/src/main/res/layout/activity_customer_order_page.xml
+++ b/app/src/main/res/layout/activity_customer_order_page.xml
@@ -23,9 +23,11 @@
             android:fontFamily="@font/opensans_bold"
             android:textSize="32sp"
             android:textColor="@color/black"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="16dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/orderRV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
